style.css
body {
	font-family: 'Inria Serif', serif;
	color: #000000;

}
footer {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 100px;
	background: black;
	color: white;
	margin-top: 100px;
	text-transform: uppercase;
}

#intro {
	text-align: center;
	padding-top: 25%;
	padding-bottom: 25%;
  background-image: url("images/indexpic1.png");
	background-size: cover;
	background-repeat: no-repeat;

}

#projectsIntro {
	text-align: center;
	padding-top: 25%;
	padding-bottom: 25%;
	background-image: url("images/projectspic.png");
	background-size: cover;
	background-repeat: no-repeat;

}

#resumeIntro {
	text-align: center;
	padding-top: 25%;
	padding-bottom: 25%;
	background-image: IMAGE;
	background-size: cover;
	background-repeat: no-repeat;

}

#contactIntro {
	text-align: center;
	padding-top: 25%;
	padding-bottom: 25%;
	background-image: url("images/contactpic.png");
	background-size: cover;
	background-repeat: no-repeat;

}

#aboutIntro {
	text-align: center;
	padding-top: 25%;
	padding-bottom: 25%;
	background-image: url("images/contactpic.png");
	background-size: cover;
	background-repeat: no-repeat;

}

#content {
	color: #FFFFFF;

}
#content h1 {
	border-top: 1px solid white;
	border-bottom: 1px solid white;
	font-size: 120px;
	width: 50%;
	margin: 0 auto;

}

#content h3 {
	margin: 0 auto;
	width: 60%;
}

#about {
	margin-top: 10%;
	text-align: center;
}

#info {
	margin-top: 10%;
	text-align: center;
}

#line {
	border-top: 2px solid black;
	width: 45%;
	margin: 0 auto;
	margin-top: 2%;
	margin-bottom: 2%

}

#largeline {
	border-top: 2px solid black;
	width: 75%;
	margin: 0 auto;
	margin-top: 2%;
	margin-bottom: 2%

}

#aboutMe {
	text-transform: uppercase;
}

.image-box {
	width: 25%;
	margin-top: 30px;
	border-radius: 50%;
	margin-bottom: 50px;
}

.btn {
  letter-spacing: 1px;
  background-color: white;
  border: none;
  color: black;
  padding: 12px 30px;
  cursor: pointer;
  margin-bottom: 20px;
  margin-top: -20px;
}

.btn:hover {
  background-color: gray;
  transform: scale(1.2);
}

ul{
  margin: 0;
  padding: 0;
}

#projects li{
	list-style: none;
	margin: 10px;
}

#contact li {
	display: inline-block;
	margin:6px;
	list-style: none;
}

#contact ul li a{
  color: black;
  text-decoration: none;
  font-size: 60px;
  transition: all ease-in-out 250ms;
}

#contact li a:hover{
	color: gray;
}

#contact {
	margin-top: 50px;
	text-align: center;
}

.btn {
	color: white;
	background: black;
}

.responsive {
	width: 100%;
	height: auto;
}

#projects {
	margin-top: 80px;
	text-align: center;
}

#note {
	margin-top: 20px;
}

.carousel-caption{
	font-family: 'Mansalva', cursive;
}

#compbioDescription{
	max-width: 60%;
}

